sandbox/mpi/fp_mpi.pas

function MPI_Group_excl(group:TMPI_Group; n:longint; ranks:Plongint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_f2c(group:TMPI_Fint):TMPI_Group;cdecl;external libhdf5;
function MPI_Group_free(group:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_incl(group:TMPI_Group; n:longint; ranks:Plongint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_intersection(group1:TMPI_Group; group2:TMPI_Group; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_range_excl(group:TMPI_Group; n:longint; ranges:Parray[0..2] of longint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_range_incl(group:TMPI_Group; n:longint; ranges:Parray[0..2] of longint; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Group_rank(group:TMPI_Group; rank:Plongint):longint;cdecl;external libhdf5;
function MPI_Group_size(group:TMPI_Group; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Group_translate_ranks(group1:TMPI_Group; n:longint; ranks1:Plongint; group2:TMPI_Group; ranks2:Plongint):longint;cdecl;external libhdf5;
function MPI_Group_union(group1:TMPI_Group; group2:TMPI_Group; newgroup:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Ibsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Improbe(source:longint; tag:longint; comm:TMPI_Comm; flag:Plongint; message:PMPI_Message; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Imrecv(buf:pointer; count:longint; _type:TMPI_Datatype; message:PMPI_Message; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Info_c2f(info:TMPI_Info):TMPI_Fint;cdecl;external libhdf5;
function MPI_Info_create(info:PMPI_Info):longint;cdecl;external libhdf5;
function MPI_Info_delete(info:TMPI_Info; key:Pchar):longint;cdecl;external libhdf5;
function MPI_Info_dup(info:TMPI_Info; newinfo:PMPI_Info):longint;cdecl;external libhdf5;
function MPI_Info_f2c(info:TMPI_Fint):TMPI_Info;cdecl;external libhdf5;
function MPI_Info_free(info:PMPI_Info):longint;cdecl;external libhdf5;
function MPI_Info_get(info:TMPI_Info; key:Pchar; valuelen:longint; value:Pchar; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Info_get_nkeys(info:TMPI_Info; nkeys:Plongint):longint;cdecl;external libhdf5;
function MPI_Info_get_nthkey(info:TMPI_Info; n:longint; key:Pchar):longint;cdecl;external libhdf5;
function MPI_Info_get_valuelen(info:TMPI_Info; key:Pchar; valuelen:Plongint; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Info_set(info:TMPI_Info; key:Pchar; value:Pchar):longint;cdecl;external libhdf5;
function MPI_Init(argc:Plongint; argv:PPPchar):longint;cdecl;external libhdf5;
function MPI_Initialized(flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Init_thread(argc:Plongint; argv:PPPchar; required:longint; provided:Plongint):longint;cdecl;external libhdf5;
function MPI_Intercomm_create(local_comm:TMPI_Comm; local_leader:longint; bridge_comm:TMPI_Comm; remote_leader:longint; tag:longint; 
           newintercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Intercomm_merge(intercomm:TMPI_Comm; high:longint; newintercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Iprobe(source:longint; tag:longint; comm:TMPI_Comm; flag:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Irecv(buf:pointer; count:longint; datatype:TMPI_Datatype; source:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Irsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Isend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Issend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Is_thread_main(flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Lookup_name(service_name:Pchar; info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Message_c2f(message:TMPI_Message):TMPI_Fint;cdecl;external libhdf5;
function MPI_Message_f2c(message:TMPI_Fint):TMPI_Message;cdecl;external libhdf5;
function MPI_Mprobe(source:longint; tag:longint; comm:TMPI_Comm; message:PMPI_Message; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Mrecv(buf:pointer; count:longint; _type:TMPI_Datatype; message:PMPI_Message; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Neighbor_allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ineighbor_allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Neighbor_allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ineighbor_allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Neighbor_alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ineighbor_alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Neighbor_alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ineighbor_alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Neighbor_alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:PMPI_Aint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:PMPI_Aint; recvtypes:PMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ineighbor_alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:PMPI_Aint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:PMPI_Aint; recvtypes:PMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Op_c2f(op:TMPI_Op):TMPI_Fint;cdecl;external libhdf5;
function MPI_Op_commutative(op:TMPI_Op; commute:Plongint):longint;cdecl;external libhdf5;
function MPI_Op_create(_function:PMPI_User_function; commute:longint; op:PMPI_Op):longint;cdecl;external libhdf5;
function MPI_Open_port(info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Op_f2c(op:TMPI_Fint):TMPI_Op;cdecl;external libhdf5;
function MPI_Op_free(op:PMPI_Op):longint;cdecl;external libhdf5;
function MPI_Pack_external(datarep:Pchar; inbuf:pointer; incount:longint; datatype:TMPI_Datatype; outbuf:pointer; 
           outsize:TMPI_Aint; position:PMPI_Aint):longint;cdecl;external libhdf5;
function MPI_Pack_external_size(datarep:Pchar; incount:longint; datatype:TMPI_Datatype; size:PMPI_Aint):longint;cdecl;external libhdf5;
function MPI_Pack(inbuf:pointer; incount:longint; datatype:TMPI_Datatype; outbuf:pointer; outsize:longint; 
           position:Plongint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Pack_size(incount:longint; datatype:TMPI_Datatype; comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function MPI_Pcontrol(level:longint; args:array of const):longint;cdecl;external libhdf5;
function MPI_Pcontrol(level:longint):longint;cdecl;external libhdf5;
function MPI_Probe(source:longint; tag:longint; comm:TMPI_Comm; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Publish_name(service_name:Pchar; info:TMPI_Info; port_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Put(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Query_thread(provided:Plongint):longint;cdecl;external libhdf5;
function MPI_Raccumulate(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; op:TMPI_Op; win:TMPI_Win; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Recv_init(buf:pointer; count:longint; datatype:TMPI_Datatype; source:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Recv(buf:pointer; count:longint; datatype:TMPI_Datatype; source:longint; tag:longint; 
           comm:TMPI_Comm; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Reduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ireduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           root:longint; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Reduce_local(inbuf:pointer; inoutbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op):longint;cdecl;external libhdf5;
function MPI_Reduce_scatter(sendbuf:pointer; recvbuf:pointer; recvcounts:Plongint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ireduce_scatter(sendbuf:pointer; recvbuf:pointer; recvcounts:Plongint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Reduce_scatter_block(sendbuf:pointer; recvbuf:pointer; recvcount:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function MPI_Ireduce_scatter_block(sendbuf:pointer; recvbuf:pointer; recvcount:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Register_datarep(datarep:Pchar; read_conversion_fn:PMPI_Datarep_conversion_function; write_conversion_fn:PMPI_Datarep_conversion_function; dtype_file_extent_fn:PMPI_Datarep_extent_function; extra_state:pointer):longint;cdecl;external libhdf5;
function MPI_Request_c2f(request:TMPI_Request):TMPI_Fint;cdecl;external libhdf5;
function MPI_Request_f2c(request:TMPI_Fint):TMPI_Request;cdecl;external libhdf5;
function MPI_Request_free(request:PMPI_Request):longint;cdecl;external libhdf5;
function MPI_Request_get_status(request:TMPI_Request; flag:Plongint; status:PMPI_Status):longint;cdecl;external libhdf5;
function MPI_Rget(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; win:TMPI_Win; request:PMPI_Request):longint;cdecl;external libhdf5;
